# dfinity-rust-hello

./: .gitignore  dfx.json  package-lock.json
src/rust_hello/: Cargo.toml
src/rust_hello/src/: lib.rs
